--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@
 html,
 body {
     margin: 0;
-    font-family: 'Segoe UI';
+    font-family: 'Montserrat', 'Segoe UI', 'Helvetica', 'Arial', sans-serif;
     font-size: 0.98em;
 }
 
