--- a/css/style.css
+++ b/css/style.css
@@ -1,323 +1,373 @@
 * {
-    box-sizing: border-box;
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
+  box-sizing: border-box;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
 
 html,
 body {
-    margin: 0;
-    font-family: 'Open Sans', 'Segoe UI', 'Helvetica', 'Arial', sans-serif;
-    font-size: 0.98em;
-
+  margin: 0;
+  font-family: "Open Sans", "Segoe UI", "Helvetica", "Arial", sans-serif;
+  font-size: 0.98em;
 }
 
 /* Resets */
 
 h1,
 h2 {
-    margin: 0;
-    font-weight: 300;
+  margin: 0;
+  font-weight: 300;
 }
 
 a {
-    text-decoration: none;
-    color: inherit;
+  text-decoration: none;
+  color: inherit;
 }
 
 a.text-link {
-    text-decoration: none;
-    padding-bottom: 0.1em;
-    color: #37a1cc;
-    border-bottom: 1px solid;
+  text-decoration: none;
+  padding-bottom: 0.1em;
+  color: #37a1cc;
+  border-bottom: 1px solid;
 }
 
 a.text-link:hover {
-    color: #1B7BA1;
+  color: #1b7ba1;
 }
 
 /* Content */
 
 .container {
-    max-width: 85em;
-    margin: 0 auto;
+  max-width: 85em;
+  margin: 0 auto;
 }
 
 .logo {
-    color: #fff;
+  color: #fff;
 }
 
 .navigation-top {
-    float: right;
+  float: right;
 }
 
 .navigation-top ul {
-    margin: 0;
-    padding: 0;
+  margin: 0;
+  padding: 0;
 }
 
 .navigation-top__item {
-    display: inline-block;
+  display: inline-block;
 }
 
 .navigation-top__item a {
-    text-decoration: none;
-    color: #aa6a6b;
-    letter-spacing: 0.2em;
-    font-size: 0.8em;
+  text-decoration: none;
+  color: #aa6a6b;
+  letter-spacing: 0.2em;
+  font-size: 0.8em;
 }
 
 .hero {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    height: 75vh;
-    background-image: url("../images/bg.jpg");
-    background-size: cover;
-    background-attachment: fixed;
-    box-shadow: 0px 12px 22px rgba(0, 0, 0, 0.13);
-    position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  height: 52em;
+  background-image: url("../images/bg.jpg");
+  background-size: cover;
+  background-attachment: fixed;
+  box-shadow: 0px 12px 22px rgba(0, 0, 0, 0.13);
+  position: relative;
 }
 
 .hero-overlay {
-    z-index: 50;
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    width: 100%;
-    background: linear-gradient(to right, #284b5ff2, #0860bbde);
-    overflow: hidden;
+  z-index: 50;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  width: 100%;
+  background: linear-gradient(to right, #284b5ff2, #0860bbde);
+  overflow: hidden;
 }
 
 .hero-content {
-    margin-bottom: 8em;
-    position: relative;
-    transform: translateZ(5em);
-    z-index: 100;
-    cursor: pointer;
+  margin-bottom: 12em;
+  position: relative;
+  transform: translateZ(5em);
+  z-index: 100;
+  cursor: pointer;
 }
 
 .hero-overlay:before {
-    content: "";
-    display: block;
-    position: absolute;
-    top: -40px;
-    right: -40px;
-    bottom: -40px;
-    left: -40px;
-    background: rgba(255, 255, 255, 0.03);
-    transform: rotate(150deg);
-    animation: spin2 90s infinite linear;
+  content: "";
+  display: block;
+  position: absolute;
+  top: -40px;
+  right: -40px;
+  bottom: -40px;
+  left: -40px;
+  background: rgba(255, 255, 255, 0.03);
+  transform: rotate(150deg);
+  animation: spin2 90s infinite linear;
 }
 
 .hero-overlay:after {
-    content: "";
-    display: block;
-    position: absolute;
-    top: -40px;
-    right: -40px;
-    bottom: -40px;
-    left: -40px;
-    background: rgba(255, 255, 255, 0.03);
-    transform: rotate(30deg);
-    animation: spin 80s infinite linear;
+  content: "";
+  display: block;
+  position: absolute;
+  top: -40px;
+  right: -40px;
+  bottom: -40px;
+  left: -40px;
+  background: rgba(255, 255, 255, 0.03);
+  transform: rotate(30deg);
+  animation: spin 80s infinite linear;
 }
 
 .hero h1 {
-    color: #fff;
-    font-size: 5em;
+  color: #fff;
+  font-size: 5em;
 }
 
 .hero h2 {
-    font-size: 2.2em;
-    color: #a7cdef;
+  font-size: 2.2em;
+  color: #a7cdef;
+  margin-bottom: 2em;
+}
+.hero h3 {
+  font-size: 1.3em;
+  color: #a7cdef;
+  font-weight: 300;
+  margin: 0 0 0.5em 0;
+}
+.hero-content__highlights-container {
+  width: 66em;
+  margin-bottom: 4em;
+}
+.hero-content__highlight {
+  float: left;
+  width: 33.3333%;
+  height: 14em;
+  padding: 0 2em;
+  text-align: center;
+  background: #f5f5f5;
+  border-radius: 5px;
 }
 
+.hero-content__highlight--pop {
+  background: #fff;
+  transform: scale(1.1);
+  box-shadow: 0 5px 42px rgba(0, 0, 0, 0.1);
+}
+
+.hero-content__highlight ion-icon {
+  color: #ffae47;
+  font-size: 2.4em;
+}
+.hero-content__highlight-title {
+  color: #949494;
+  font-size: 2em;
+  margin: 0;
+  font-weight: 300;
+}
 /* Work */
 
 .work {
-    min-height: 100vh;
-    padding: 2em;
-    position: relative;
-    top: -14em;
-    z-index: 300;
+  min-height: 100vh;
+  padding: 2em;
+  position: relative;
+  top: -14em;
+  z-index: 300;
 }
 
 .work h2 {
-    font-size: 3em;
-    text-transform: uppercase;
-    color: #82add4;
-    margin-bottom: 0.5em;
-    margin-left: 0.2em;
+  font-size: 2em;
+  text-transform: uppercase;
+  color: #82add4;
+  margin-bottom: 0.3em;
+  margin-left: 0.2em;
 }
 
 .work__block-container {
-    margin: 0 auto;
+  margin: 0 auto;
 }
 
 .work__block-wrapper {
-    padding: 0.5em;
-    width: 100%;
+  padding: 0.5em;
+  width: 100%;
 }
 
 .work__block {
-    background: #fff;
-    padding: 1.2em 1.5em;
-    box-shadow: 0px 5px 85px rgba(0, 0, 0, 0.1);
+  background: #fff;
+  padding: 1.2em 1.5em;
+  box-shadow: 0px 5px 85px rgba(0, 0, 0, 0.1);
+  border-radius: 5px;
 }
 
 .work__block-title {
-    font-size: 1.8em;
-    color: #3474b7;
-    font-weight: 400;
-    margin: 0 0 1em 0;
-    padding-bottom: 0.4em;
-    border-bottom: 1px solid #efefef;
+  font-size: 1.8em;
+  color: #3474b7;
+  font-weight: 400;
+  margin: 0 0 0.2em 0;
+  padding-bottom: 0.4em;
 }
 
 .work__block-title span {
-    margin-left: 1em;
-    font-size: 0.55em;
-    color: #8A8A8A;
+  margin-left: 1em;
+  font-size: 0.55em;
+  color: #8a8a8a;
 }
 
 .work__block img {
-    width: 100%;
-    height: 100%;
-    box-shadow: 0px 5px 12px rgba(0, 0, 0, 0.2);
+  width: 100%;
+  height: 100%;
+  box-shadow: 0px 5px 12px rgba(0, 0, 0, 0.2);
 }
 
 .work__block-subtitle {
-    color: #b1b1b1;
-    font-size: 1em;
-    letter-spacing: 1.2pt;
-    margin: 2em 0 1em 0;
+  color: #b1b1b1;
+  font-size: 1em;
+  letter-spacing: 1.2pt;
+  margin: 2em 0 1em 0;
+  border-top: 1px solid #f3f3f3;
+  padding-top: 1.2em;
 }
 
 .work__block-list {
-    display: inline-block;
-    text-align: left;
-    margin: 0 auto;
-    margin: 0;
-    padding: 0;
-    list-style: square;
-    margin-left: 1.2em;
+  display: inline-block;
+  text-align: left;
+  margin: 0 auto;
+  margin: 0;
+  padding: 0;
+  list-style: square;
+  margin-left: 1.2em;
 }
 
 .work__block-list li {
-    padding: 0.4em 0;
-    color: #6d6d6d;
-    max-width: 37em;
+  padding: 0.4em 0;
+  color: #6d6d6d;
+  max-width: 37em;
 }
 
 .work__block-screenshots__container {
-    background: #e2e2e2;
-    padding: 1em;
-    overflow: hidden;
+  background: #e2e2e2;
+  padding: 1em;
+  overflow: hidden;
 }
 
 .work__block-screenshot-container {
-    background: #fff;
-    border-radius: 5px;
-    padding: 0.5em;
-    overflow: hidden;
-    float: left;
-    width: 100%;
-    max-width: 12em;
-    max-height: 7em;
-    margin-right: 1em;
+  background: #fff;
+  border-radius: 5px;
+  padding: 0.5em;
+  overflow: hidden;
+  float: left;
+  width: 100%;
+  max-width: 12em;
+  max-height: 7em;
+  margin-right: 1em;
 }
 
 .work__block-screenshot {
-    cursor: pointer;
+  cursor: pointer;
 }
 
 .work__block-screenshot img {
-    width: 100%;
-    height: auto;
+  width: 100%;
+  height: auto;
 }
 
 /* Footer */
 
 .footer {
-    text-align: center;
-    color: #ababab;
-    padding: 1em 0;
+  text-align: center;
+  color: #ababab;
+  padding: 1em 0;
 }
 
 /* Media Queries */
-
-@media(max-width:800px) {
-    .hero h1 {
-        font-size: 4em;
-    }
-    .hero h2 {
-        font-size: 1.4em;
-    }
+@media (max-width: 1150px) {
+  .hero-content {
+    padding: 2em;
+  }
+  .hero {
+    height: auto;
+  }
+  .hero h1 {
+    font-size: 4em;
+  }
+  .hero h2 {
+    font-size: 1.4em;
+  }
+  .hero-content__highlights-container {
+    width: 100%;
+  }
+  .hero-content__highlight {
+    float: none;
+    width: 100%;
+    height: auto;
+    transform: none;
+    overflow: hidden;
+    margin-bottom: 1em;
+  }
 }
 
-@media(max-width:570px) {
-    .container {
-        padding: 1em;
-    }
-    .hero h1 {
-        font-size: 4em;
-    }
-    .hero h2 {
-        font-size: 1.4em;
-    }
-    .work__block-title {
-        font-size:1.5em;
-    }
-    .work__block-title span{
-        display:inline-block;
-        padding-left:2.5em;
-    }
+@media (max-width: 570px) {
+  .container {
+    padding: 1em;
+  }
+  .hero h1 {
+    font-size: 4em;
+  }
+  .hero h2 {
+    font-size: 1.4em;
+  }
+  .work__block-title {
+    font-size: 1.5em;
+  }
+  .work__block-title span {
+    display: inline-block;
+    padding-left: 2.5em;
+  }
 }
 
-@media(max-width:480px) {
-    .hero {
-        height:25em;
-    }
-    .hero-content {
-        font-size: 0.7em;
-        width: 100%;
-        padding-left: 2em;
-    }
-    .work h2 {
-        font-size: 1.7em;
-        margin: 3em 0 0.5em 0;
-    }
-    .work__block-wrapper{
-        padding:0;
-    }
+@media (max-width: 480px) {
+  .hero-content {
+    font-size: 0.7em;
+    width: 100%;
+    padding-left: 2em;
+  }
+  .work h2 {
+    font-size: 1.7em;
+    margin: 1em 0 0.5em 0;
+  }
+  .work__block-wrapper {
+    padding: 0;
+  }
 }
 
-@media(max-width:420px) {
-    .work__block-screenshot-container {
-        float: none;
-        margin: 1em auto;
-        margin-bottom:1em;
-    }
+@media (max-width: 420px) {
+  .work__block-screenshot-container {
+    float: none;
+    margin: 1em auto;
+    margin-bottom: 1em;
+  }
 }
 
 /* Animation */
 
 @keyframes spin {
-    0% {
-        transform: rotate(80deg);
-    }
-    100% {
-        transform: rotate(220deg);
-    }
+  0% {
+    transform: rotate(80deg);
+  }
+  100% {
+    transform: rotate(220deg);
+  }
 }
 
 @keyframes spin2 {
-    0% {
-        transform: rotate(50deg);
-    }
-    100% {
-        transform: rotate(160deg);
-    }
+  0% {
+    transform: rotate(50deg);
+  }
+  100% {
+    transform: rotate(160deg);
+  }
 }
