--- a/css/style.css
+++ b/css/style.css
@@ -146,7 +146,7 @@ a.text-link:hover {
 .hero-content__highlight {
   float: left;
   width: 33.3333%;
-  height: 14em;
+  height: 15em;
   padding: 0 2em;
   text-align: center;
   background: #f5f5f5;
@@ -164,10 +164,14 @@ a.text-link:hover {
   font-size: 2.4em;
 }
 .hero-content__highlight-title {
-  color: #949494;
-  font-size: 2em;
-  margin: 0;
-  font-weight: 300;
+    color: #676767;
+    font-size: 2em;
+    margin: 0;
+    font-weight: 500;
+    letter-spacing: 0.04em;
+}
+.hero-content__highlight-subtext{
+    color:#757575;
 }
 /* Work */
 
