--- a/css/style.css
+++ b/css/style.css
@@ -164,14 +164,14 @@ a.text-link:hover {
   font-size: 2.4em;
 }
 .hero-content__highlight-title {
-    color: #676767;
-    font-size: 2em;
-    margin: 0;
-    font-weight: 500;
-    letter-spacing: 0.04em;
+  color: #676767;
+  font-size: 2em;
+  margin: 0;
+  font-weight: 500;
+  letter-spacing: 0.04em;
 }
-.hero-content__highlight-subtext{
-    color:#757575;
+.hero-content__highlight-subtext {
+  color: #757575;
 }
 /* Work */
 
@@ -268,6 +268,11 @@ a.text-link:hover {
   max-width: 12em;
   max-height: 7em;
   margin-right: 1em;
+  transition:all 250ms ease-in-out;
+}
+
+.work__block-screenshot-container:hover {
+    transform:scale(1.05);
 }
 
 .work__block-screenshot {
