--- a/css/style.css
+++ b/css/style.css
@@ -228,7 +228,7 @@ a.text-link:hover {
 }
 
 .work__block-subtitle {
-  color: #b1b1b1;
+  color: #7d7d7d;
   font-size: 1em;
   letter-spacing: 1.2pt;
   margin: 2em 0 1em 0;
